# minutiae_extractor

./: .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt
scripts/: install_model.py  patch_wrapt_formatargspec.py
src/fingerflow/extractor/: classify_net.py  minutiae_net.py
src/fingerflow/extractor/CoreNet/: custom_layers.py  utils.py
src/fingerflow/extractor/MinutiaeNet/CoarseNet/: coarse_net_model.py  coarse_net_run.py  coarse_net_train.py  coarse_net_utils.py  loss_function.py  minutiae_net_utils.py
src/fingerflow/extractor/MinutiaeNet/FineNet/: fine_net_model.py  fine_net_train.py
